UI 수정, 이미지 삭제, 새 HTML 추가

--- a/boardList.html
+++ b/boardList.html
@@ -101,13 +101,13 @@
 
 			<!-- 페이징 -->
 			<div class="pg_wrap">
-				<a href=""><img src="./img/p_prev.png" alt=""></a>
+				<a href=""><img src="resources/images/p_prev.png" alt=""></a>
 				<a href="">1</a>
 				<a href="">2</a>
 				<a href="">3</a>
 				<a href="">4</a>
 				<a href="">5</a>
-				<a href=""><img src="./img/p_next.png" alt=""></a>
+				<a href=""><img src="resources/images/p_next.png" alt=""></a>
 			</div>
 
 			<!-- 검색창 -->
