--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 	<header class="header">
 		<div class="inner">
 			<h1 class="logo">
-				<a href="index.html"><img src="img/logo.svg" alt=""></a>
+				<a href="main.html"><img src="resources/images/logo.svg" alt=""></a>
 			</h1>
 			<ul class="depth">
 				<li>
@@ -30,8 +30,8 @@
 				</li>
 			</ul>
 			<div class="hd_util">
-				<a href="">회원가입</a>
-				<a href="">로그인</a>
+				<a href="join.html">회원가입</a>
+				<a href="login.html">로그인</a>
 			</div>
 		</div>
 	</header>
