--- a/join.html
+++ b/join.html
@@ -27,7 +27,7 @@
 					</li>
 					<li>
 						<span class="form_label">PW</span>
-						<input type="password" name="pw" placeholder="PW를 입력하세요" class="ipt_tt" required>
+						<input type="password" name="pw" placeholder="영문/숫자/특수문자 조합 8자 이상" class="ipt_tt" required>
 					</li>
 					<li>
 						<span class="form_label">이름</span>
