--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 	<header class="header">
 		<div class="inner">
 			<h1 class="logo">
-				<a href="main.html"><img src="resources/images/logo.svg" alt=""></a>
+				<a href="index.html"><img src="resources/images/logo.svg" alt=""></a>
 			</h1>
 			<ul class="depth">
 				<li>
