--- a/boardView.html
+++ b/boardView.html
@@ -43,7 +43,7 @@
 					 	- 이미지 파일일 경우 : 이미지로 보여주기
 						- 다른 파일일 경우 : a태그로 다운로드 가능하도록
 					-->
-					<a href="img\p_next.png" download class="view_file">
+					<a href="resources/images/p_next.png" download class="view_file">
 						<span class="g-icon c_main material-symbols-rounded">attachment</span>
 						<div class="view_file_info">
 							<p>첨부한파일이름.zip</p><!-- 파일 이름.확장자 -->
@@ -63,12 +63,12 @@
 							<div class="cmt_top">
 								<div class="cmt_mb">
 									<!-- 프로필 이미지 출력 / 등록된 이미지 없다면 기본이미지 user.png -->
-									<div class="mb_img"><img src="/img/logo.svg" alt=""></div>
+									<div class="mb_img"><img src="resources/images/logo.svg" alt=""></div>
 									<div class="mb_id">관리자</div>
 								</div>
 								<!-- 댓글 쓴 본인만 보이게 -->
 								<div class="cmt_BtnWrap">
-									<button class="cmt_toggle stn" onClick="popCmtBtn(this)"><img src="/img/more_vert.png" alt=""></button>
+									<button class="cmt_toggle stn" onClick="popCmtBtn(this)"><img src="resources/images/more_vert.png" alt=""></button>
 									<div class="cmt_Btn">
 										<a href="">수정</a>
 										<a href="">삭제</a>
@@ -92,7 +92,7 @@
 				<!-- 댓글 입력창 / 권한에 따라 현재는 관리자만 보이게 ? -->
 				<div class="cmt_write">
 					<div class="cmt_mb">
-						<div class="mb_img"><img src="/img/logo.svg" alt=""></div>
+						<div class="mb_img"><img src="resources/images/logo.svg" alt=""></div>
 						<div class="mb_id">내 아이디 출력</div>
 					</div>
 					<textarea class="txtarea" name="" id="" placeholder="답변 내용을 입력하세요"></textarea>
@@ -116,7 +116,7 @@
 				<div>
 					<a href="boardList.html" class="bttn ipt_sbm">목록</a>
 					<button class="bttn" onClick="pageTop()">
-						<img src="img/bk_arr_top.png" alt="">TOP
+						<img src="resources/images/bk_arr_top.png" alt="">TOP
 					</button>
 				</div>
 			</div>				
