join,login,join_success 퍼블완료

--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 	<footer class="footer">
 		<div class="inner">
-			<div class="logo ft_logo"><img src="img/logo_gray.svg" alt=""></div>
+			<div class="logo ft_logo"><img src="/resources/images/logo_gray.svg" alt=""></div>
 			<div class="ft_rt">
 				<ul class="ft_link">
 					<li><a href="">이용약관</a></li>
