--- a/login.html
+++ b/login.html
@@ -5,9 +5,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CLOAT, 이미지 클로킹 서비스</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link src="https://cdn.jsdelivr.net/npm/pretendard@1.3.9/dist/web/static/pretendard.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fonts-archive/Paperlogy/Paperlogy.css" type="text/css"/>
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<!-- summernote 에디터 cdn, css 충돌 위험 가능하면 에디터 사용 페이지에서만 추가되도록-->
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<!-- include summernote css/js -->
+	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>	 
+	<!-- summernote 에디터 cdn, css 충돌 위험 가능하면 에디터 사용 페이지에서만 추가되도록-->
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body id="cloat">
 	<div id="header"></div>
@@ -19,12 +27,18 @@
 			<form action="login" method="post">
 				<ul class="form_ul">
 					<li>
-						<span class="form_label">ID</span>
+						<span class="form_label">아이디</span>
 						<input type="text" name="id" placeholder="ID를 입력해주세요" class="ipt_tt" required>
 					</li>
 					<li>
-						<span class="form_label">PW</span>
+						<span class="form_label">비밀번호</span>
 						<input type="password" name="pw" placeholder="PW를 입력해주세요" class="ipt_tt" required>
+						<div class="chkbox_div">
+							<input type="checkbox" name="id_save" id="id_save">
+							<label for="id_save" class="chk_btn"></label>
+							<label for="id_save" class="chk_txt">아이디 저장</label>
+							<a href="" class="ml-auto">아이디/비밀번호 찾기</a>
+						</div>						
 					</li>
 					<li>
 						<input type="submit" value="로그인" class="bttn bttn_sbm2">
