--- a/mypage.html
+++ b/mypage.html
@@ -21,13 +21,36 @@
 	<div id="header"></div>
 	<!-- header 끝 -->
 	<section class="content">
-		<div class="inner inner_500">
-			<div class="join_success">
-				<img src="/resources/images/welcome.png" alt="가입 완료">
-				<h1><b>홍길동</b>님, 환영합니다!🎉</h1>
-				<p>안전한 인터넷, 행복한 얼굴, <br>이제 CLOAT와 함께하세요!</p>
-				<div class="bttn_wrap">
-				<a href="index.html" class="bttn_sbm">바로 시작하기</a>
+		<div class="inner">
+			<h2 class="page_name2">마이페이지</h2>
+			<div class="mypage">
+				<div class="mp_nav">
+					<div class="mp_profile">
+						<div class="thumb">
+							<img src="/resources/images/user.png" alt="">
+						</div>
+						<ul class="txt">
+							<!-- 이름 -->
+							<p>홍길동</p>
+							<!-- 아이디 -->
+							<small>test1234</small>
+						</ul>
+					</div>
+					<ul class="mp_menu">
+						<li>
+							<a href="">내 갤러리</a>
+						</li>					
+						<li>
+							<!-- 들어가면 후기/문의로 분기? -->
+							<a href="">내 게시글</a>					
+						</li>
+						<li>
+							<a href="">회원정보수정</a>
+						</li>
+					</ul>
+				</div>
+				<div class="mp_cont">
+					<p>아직 클로킹한 이미지가 없습니다.</p>
 				</div>
 			</div>
 		</div>
