join,login 완료, mypage.jsp 진행중

--- a/mypage.html
+++ b/mypage.html
@@ -21,8 +21,12 @@
 	<div id="header"></div>
 	<!-- header 끝 -->
 	<section class="content">
-		<div class="inner">
-			<h2 class="page_name2">마이페이지</h2>
+		<div class="page_top">
+			<div class="inner">
+				<h2 class="pageName">마이페이지</h2>
+			</div>		
+		</div>
+		<div class="inner pdx">
 			<div class="mypage">
 				<div class="mp_nav">
 					<div class="mp_profile">
@@ -50,7 +54,9 @@
 					</ul>
 				</div>
 				<div class="mp_cont">
-					<p>아직 클로킹한 이미지가 없습니다.</p>
+					<div class="no_content">
+						<p>아직 클로킹한 이미지가 없습니다.</p>
+					</div>
 				</div>
 			</div>
 		</div>
