join,join_success,login 완료

--- a/mypage.html
+++ b/mypage.html
@@ -31,7 +31,7 @@
 				<div class="mp_nav">
 					<div class="mp_profile">
 						<div class="thumb">
-							<img src="/resources/images/user.png" alt="">
+							<img src="resources\images\user.png" alt="">
 						</div>
 						<ul class="txt">
 							<!-- 이름 -->
