--- a/mypage_edit.html
+++ b/mypage_edit.html
@@ -21,12 +21,8 @@
 	<div id="header"></div>
 	<!-- header 끝 -->
 	<section class="content">
-		<div class="page_top">
-			<div class="inner">
-				<h2 class="pageName">마이페이지</h2>
-			</div>		
-		</div>
-		<div class="inner pdx">
+		<div class="inner">
+			<h2 class="page_name2">마이페이지</h2>		
 			<div class="mypage">
 				<div class="mp_nav">
 					<div class="mp_profile">
@@ -45,20 +41,22 @@
 							<a href="">내 갤러리</a>
 						</li>					
 						<li>
-							<!-- 들어가면 후기/문의로 분기? -->
-							<a href="">내 게시글</a>					
+							<a href="">내 후기글</a>					
 						</li>
 						<li>
-							<a href="">회원정보수정</a>
+							<a href="">내 문의글</a>					
+						</li>						
+						<li>
+							<a href="" class="c_main">내 정보수정</a>
 						</li>
 					</ul>
 				</div>
+				<!-- 마이페이지는 이 부분만 바뀝니다! -->
 				<div class="mp_cont">
-					<div class="no_content">
-						<p>아직 클로킹한 이미지가 없습니다.</p>
-					</div>
+					<!-- 내 정보수정 내용 -->
 				</div>
-			</div>
+
+			</div>			
 		</div>
 	</section>
 
