--- a/mypage_review.html
+++ b/mypage_review.html
@@ -21,15 +21,42 @@
 	<div id="header"></div>
 	<!-- header 끝 -->
 	<section class="content">
-		<div class="inner inner_500">
-			<div class="join_success">
-				<img src="resources/images/welcome.png" alt="가입 완료">
-				<h1><b>홍길동</b>님, 환영합니다!🎉</h1>
-				<p>안전한 인터넷, 행복한 얼굴, <br>이제 CLOAT와 함께하세요!</p>
-				<div class="bttn_wrap">
-				<a href="index.html" class="bttn_sbm">바로 시작하기</a>
+		<div class="inner">
+			<h2 class="page_name2">마이페이지</h2>		
+			<div class="mypage">
+				<div class="mp_nav">
+					<div class="mp_profile">
+						<div class="thumb">
+							<img src="resources\images\user.png" alt="">
+						</div>
+						<ul class="txt">
+							<!-- 이름 -->
+							<p>홍길동</p>
+							<!-- 아이디 -->
+							<small>test1234</small>
+						</ul>
+					</div>
+					<ul class="mp_menu">
+						<li>
+							<a href="">내 갤러리</a>
+						</li>					
+						<li>
+							<a href="" class="c_main">내 후기글</a>					
+						</li>
+						<li>
+							<a href="">내 문의글</a>					
+						</li>						
+						<li>
+							<a href="">내 정보수정</a>
+						</li>
+					</ul>
 				</div>
-			</div>
+				<!-- 마이페이지는 이 부분만 내용이 변경됩니다! -->
+				<div class="mp_cont">
+					<!-- 내 후기글 : tb_review 테이블에서 id가 로그인한 id와 같은 글 최신순으로 출력 -->
+				</div>
+
+			</div>			
 		</div>
 	</section>
 
