join,join_success,login 완료/ mypage,아이디/비번찾기 작업중

--- a/find.html
+++ b/find.html
@@ -20,43 +20,40 @@
 <body id="cloat">
 	<div id="header"></div>
 	<!-- header 끝 -->
-	<section class="content">
-		<div class="inner">
-			<h2 class="page_name2">마이페이지</h2>		
-			<div class="mypage">
-				<div class="mp_nav">
-					<div class="mp_profile">
-						<div class="thumb">
-							<img src="resources\images\user.png" alt="">
-						</div>
-						<ul class="txt">
-							<!-- 이름 -->
-							<p>홍길동</p>
-							<!-- 아이디 -->
-							<small>test1234</small>
+	 
+	<section class="content join">
+		<div class="inner inner_500">
+			<h2 class="page_name2">아이디/비밀번호 찾기</h2>
+			<ul class="tabTit">
+				<li>아이디 찾기</li>
+				<li>비밀번호 찾기</li>
+			</ul>
+			<ul class="tabCont">
+				<li>
+					.
+					<form action="" method="post">
+						<ul class="form_ul">
+							<li>
+								<p>회원정보에 등록된 연락처로 찾기</p>
+							</li>
+							<li>
+								<span class="form_label">이름</span>
+								<input type="text" name="name" placeholder="이름을 입력해주세요" class="ipt_tt" required>
+							</li>
+							<li>
+								<span class="form_label">연락처</span>
+								<input type="text" name="pw" placeholder="01012345678" class="ipt_tt" required>					
+							</li>							
+							<li>
+								<input type="submit" value="아이디 찾기" class="bttn bttn_sbm2">
+							</li>
 						</ul>
-					</div>
-					<ul class="mp_menu">
-						<li>
-							<a href="">내 갤러리</a>
-						</li>					
-						<li>
-							<a href="">내 후기글</a>					
-						</li>
-						<li>
-							<a href="">내 문의글</a>					
-						</li>						
-						<li>
-							<a href="" class="c_main">내 정보수정</a>
-						</li>
-					</ul>
-				</div>
-				<!-- 마이페이지는 이 부분만 바뀝니다! -->
-				<div class="mp_cont">
-					<!-- 내 정보수정 내용 -->
-				</div>
+					</form>
+				</li>
+				<li>
 
-			</div>			
+				</li>
+			</ul>
 		</div>
 	</section>
 
