--- a/my_gallery.html
+++ b/my_gallery.html
@@ -38,22 +38,27 @@
 					</div>
 					<ul class="mp_menu">
 						<li>
-							<a href="">내 갤러리</a>
+							<a href="my_gallery.html" class="c_main">내 갤러리</a>
 						</li>					
 						<li>
-							<a href="">내 후기글</a>					
+							<a href="my_review.html">내 후기글</a>					
 						</li>
 						<li>
-							<a href="" class="c_main">내 문의글</a>					
+							<a href="my_qna.html">내 문의글</a>					
 						</li>						
 						<li>
-							<a href="">내 정보수정</a>
+							<a href="my_edit.html">내 정보수정</a>
 						</li>
 					</ul>
 				</div>
 				<!-- 마이페이지는 이 부분만 바뀝니다! -->
 				<div class="mp_cont">
-					<!-- 내 문의글 : tb_qna 테이블에서 id가 로그인한 id와 같은 글 최신순으로 출력 -->
+					<!-- if : 내 갤러리 -->
+					<!-- 클로킹한 이미지가 하나도 없다면 -->
+					<div class="no_content">
+						<p>아직 클로킹한 이미지가 없습니다.</p>
+					</div>
+					<!-- 클로킹한 이미지가 있다면 -->
 				</div>
 
 			</div>			
