마이페이지 하는중

--- a/header.html
+++ b/header.html
@@ -30,8 +30,10 @@
 				</li>
 			</ul>
 			<div class="hd_util">
-				<a href="join.html">회원가입</a>
-				<a href="login.html">로그인</a>
+				<!-- <a href="join.html">회원가입</a>
+				<a href="login.html">로그인</a> -->
+				<a href="my_gallery.html">마이페이지</a>
+				<a href="">로그아웃</a>				
 			</div>
 		</div>
 	</header>
