--- a/my_edit.html
+++ b/my_edit.html
@@ -62,14 +62,18 @@
 								<input type="text" name="id" value="tb_user의 id 출력, 수정X" class="ipt_tt" disabled>
 							</li>
 							<li>
-								<span class="form_label">비밀번호</span>
-								<input id="inputPw" type="password" name="pw" placeholder="영문/숫자/특수문자 조합 8자 이상" class="ipt_tt" required>
-								<small id="pwCheckMsg"></small>
-							</li>
-							<li>
-								<span class="form_label">비밀번호 확인</span>
-								<input id="inputPwChk" type="password" placeholder="비밀번호를 다시 한 번 입력해주세요" class="ipt_tt">
-								<small id="pwMatchMsg"></small>
+								<ul class="d_flex">
+									<li>
+										<span class="form_label">비밀번호</span>
+										<input id="inputPw" type="password" name="pw" placeholder="영문/숫자/특수문자 조합 8자 이상" class="ipt_tt" required>
+										<small id="pwCheckMsg"></small>										
+									</li>
+									<li>
+										<span class="form_label">비밀번호 확인</span>
+										<input id="inputPwChk" type="password" placeholder="비밀번호를 다시 한 번 입력해주세요" class="ipt_tt">
+										<small id="pwMatchMsg"></small>
+									</li>									
+								</ul>
 							</li>				
 							<li>
 								<span class="form_label">이름</span>
