회원정보수정 my_edit, mb_check 완료

--- a/mb_check.html
+++ b/mb_check.html
@@ -23,15 +23,14 @@
 
 	<section class="content join">
 		<div class="inner inner_500">
-			<h2 class="page_name2">비밀번호 확인</h2>
-			<form action="" method="post">
+			<h2 class="page_name2">내 정보수정</h2>
+			<form action="my_edit.html" method="post">
 				<ul class="form_ul">
 					<li>
-						<span class="form_label">PW</span>
 						<input type="password" name="pw" placeholder="비밀번호를 입력하세요" class="ipt_tt" required>
 					</li>
 					<li>
-						<input type="submit" value="회원가입" class="bttn bttn_sbm2">
+						<input type="submit" value="비밀번호 확인" class="bttn bttn_sbm2">
 					</li>	
 				</ul>	
 			</form>		
