--- a/my_gallery.html
+++ b/my_gallery.html
@@ -53,12 +53,29 @@
 				</div>
 				<!-- 마이페이지는 이 부분만 바뀝니다! -->
 				<div class="mp_cont">
-					<!-- if : 내 갤러리 -->
-					<!-- 클로킹한 이미지가 하나도 없다면 -->
-					<div class="no_content">
+					<!-- 내 갤러리 내용 -->
+					<div class="mp_tit">내 갤러리</div>
+					<!-- if : 클로킹한 이미지가 하나도 없다면?! -->
+					<!-- <div class="no_content">
 						<p>아직 클로킹한 이미지가 없습니다.</p>
-					</div>
-					<!-- 클로킹한 이미지가 있다면 -->
+					</div> -->
+
+					<!-- if : 클로킹한 이미지가 있다면 -->
+					<ul class="my_gall">
+						
+						<!-- 클로킹 이미지들.. li 통째로 반복문에 넣어주세요 -->
+						<li>
+							<div class="gall_box">
+								<!-- DB: tb_ubload.id == tb_user.id인 transformed_img의 이미지 파일 경로 ! -->
+								<a href="이미지경로 똑같이 넣어주세요" class="thumb">
+									<img src="resources/images/test.png" alt="">
+								</a>
+								<!-- tb_upload.created_at -->
+								<p class="txt">변환날짜 : 2025.05.22 16:01:30</p>
+							</div>
+						</li>			
+						
+					</ul>
 				</div>
 
 			</div>			
