마이페이지- 내 갤러리 mypage.html 완료

--- a/my_gallery.html
+++ b/my_gallery.html
@@ -67,14 +67,14 @@
 						<li>
 							<div class="gall_box">
 								<!-- DB: tb_ubload.id == tb_user.id인 transformed_img의 이미지 파일 경로 ! -->
-								<a href="이미지경로 똑같이 넣어주세요" class="thumb">
+								<a href="resources/images/test.png" class="thumb">
 									<img src="resources/images/test.png" alt="">
 								</a>
 								<!-- tb_upload.created_at -->
 								<p class="txt">변환날짜 : 2025.05.22 16:01:30</p>
 							</div>
 						</li>			
-						
+
 					</ul>
 				</div>
 
